# opencv-static-build-cpp--docker-compose

./: .gitignore  README.md  docker-compose.yml
workspace/opencv-dnn-demo/: CMakeLists.txt
